@@ -420,16 +420,12 @@ class EventDispatcher(object):
 
         # Check instance for an event handler
         try:
-            if getattr(self, event_type)(*args):
+            func = getattr(self, event_type, None)
+            if func:
+                func(*args)
                 return EVENT_HANDLED
-        except AttributeError:
-            pass
-        except TypeError as exception:
+        except BaseException as exception:
             self._raise_dispatch_exception(event_type, args, getattr(self, event_type), exception)
-        else:
-            invoked = True
-
-        if invoked:
             return EVENT_UNHANDLED
 
         return False
